# RAG_Self_Correction

./: README.md  main.py  pyproject.toml  vectorstore.pkl
scripts/: create_index.py
src/crag/: app.py  config.py  graph.py
src/crag/services/: indexing.py  models.py
